--- a/DekiApp_pyqt5/Screens/new_weld_UI.ui
+++ b/DekiApp_pyqt5/Screens/new_weld_UI.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1100</width>
-    <height>500</height>
+    <width>1264</width>
+    <height>557</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -234,6 +234,18 @@
          </property>
          <item>
           <widget class="QWidget" name="leftSidedContent" native="true">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>600</width>
+             <height>480</height>
+            </size>
+           </property>
            <layout class="QVBoxLayout" name="verticalLayout_2">
             <property name="spacing">
              <number>0</number>
@@ -309,6 +321,7 @@ QLabel{
 QLineEdit{
 	background-color: (245, 245, 245);
 	color: rgb(121, 121, 121);
+	border: 1px solid rgba(150, 150, 150, 150);
 }
 
 QPushButton{
@@ -554,7 +567,7 @@ QComboBox{
                           <property name="sizeHint" stdset="0">
                            <size>
                             <width>20</width>
-                            <height>30</height>
+                            <height>20</height>
                            </size>
                           </property>
                          </spacer>
@@ -1419,7 +1432,7 @@ background-color: rgb(0, 0, 0);}</string>
                          </widget>
                         </item>
                         <item alignment="Qt::AlignHCenter">
-                         <widget class="QRadioButton" name="radioButton">
+                         <widget class="QRadioButton" name="TMnotSpecifiedRadioBtn">
                           <property name="text">
                            <string>not specified</string>
                           </property>
@@ -1782,6 +1795,69 @@ background-color: rgb(0, 0, 0);}</string>
                     </layout>
                    </widget>
                   </item>
+                  <item>
+                   <widget class="QFrame" name="frame_5">
+                    <property name="frameShape">
+                     <enum>QFrame::StyledPanel</enum>
+                    </property>
+                    <property name="frameShadow">
+                     <enum>QFrame::Raised</enum>
+                    </property>
+                    <layout class="QHBoxLayout" name="horizontalLayout_3">
+                     <item>
+                      <widget class="QPushButton" name="pushButton_2">
+                       <property name="minimumSize">
+                        <size>
+                         <width>0</width>
+                         <height>30</height>
+                        </size>
+                       </property>
+                       <property name="styleSheet">
+                        <string notr="true">QPushButton{
+	font: 75 10pt &quot;Arial&quot; bold;
+	color: rgb(255, 255, 255);
+	border-radius: 5px;
+	border: 1px solid rgb(30, 210, 80);
+	background-color: rgb(30, 210, 80);
+}</string>
+                       </property>
+                       <property name="text">
+                        <string>Discard</string>
+                       </property>
+                      </widget>
+                     </item>
+                     <item>
+                      <widget class="QPushButton" name="addConstructionBtn">
+                       <property name="enabled">
+                        <bool>false</bool>
+                       </property>
+                       <property name="minimumSize">
+                        <size>
+                         <width>160</width>
+                         <height>30</height>
+                        </size>
+                       </property>
+                       <property name="styleSheet">
+                        <string notr="true">QPushButton{
+	font: 75 10pt &quot;Arial&quot; bold;
+	color: rgb(255, 255, 255);
+	border-radius: 5px;
+	border: 1px solid rgb(30, 210, 80);
+	background-color: rgb(30, 210, 80);
+}</string>
+                       </property>
+                       <property name="text">
+                        <string>Add weld</string>
+                       </property>
+                       <property name="icon">
+                        <iconset resource="../resources.qrc">
+                         <normaloff>:/Icons/Icons/send.svg</normaloff>:/Icons/Icons/send.svg</iconset>
+                       </property>
+                      </widget>
+                     </item>
+                    </layout>
+                   </widget>
+                  </item>
                  </layout>
                 </widget>
                </item>
@@ -1838,86 +1914,17 @@ background-color: rgb(0, 0, 0);}</string>
                  <property name="sizePolicy">
                   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
                    <horstretch>0</horstretch>
-                   <verstretch>0</verstretch>
+                   <verstretch>2</verstretch>
                   </sizepolicy>
                  </property>
                  <property name="minimumSize">
                   <size>
-                   <width>500</width>
-                   <height>360</height>
+                   <width>650</width>
+                   <height>450</height>
                   </size>
                  </property>
                  <property name="styleSheet">
                   <string notr="true">background-color: rgb(255, 255, 255);</string>
-                 </property>
-                </widget>
-               </item>
-              </layout>
-             </widget>
-            </item>
-            <item>
-             <widget class="QFrame" name="buttons_3">
-              <property name="styleSheet">
-               <string notr="true">QPushButton{
-	font: 75 10pt &quot;Arial&quot; bold;
-	color: rgb(255, 255, 255);
-	border: 1px solid rgb(30, 210, 80);
-	border-radius: 10px;
-	background-color: rgb(30, 210, 80);
-}</string>
-              </property>
-              <property name="frameShape">
-               <enum>QFrame::StyledPanel</enum>
-              </property>
-              <property name="frameShadow">
-               <enum>QFrame::Raised</enum>
-              </property>
-              <layout class="QHBoxLayout" name="horizontalLayout_39">
-               <property name="spacing">
-                <number>10</number>
-               </property>
-               <property name="leftMargin">
-                <number>0</number>
-               </property>
-               <property name="topMargin">
-                <number>0</number>
-               </property>
-               <property name="rightMargin">
-                <number>0</number>
-               </property>
-               <property name="bottomMargin">
-                <number>0</number>
-               </property>
-               <item>
-                <widget class="QPushButton" name="pushButton_2">
-                 <property name="minimumSize">
-                  <size>
-                   <width>0</width>
-                   <height>30</height>
-                  </size>
-                 </property>
-                 <property name="text">
-                  <string>Discard</string>
-                 </property>
-                </widget>
-               </item>
-               <item>
-                <widget class="QPushButton" name="addConstructionBtn">
-                 <property name="enabled">
-                  <bool>false</bool>
-                 </property>
-                 <property name="minimumSize">
-                  <size>
-                   <width>160</width>
-                   <height>30</height>
-                  </size>
-                 </property>
-                 <property name="text">
-                  <string>Add weld</string>
-                 </property>
-                 <property name="icon">
-                  <iconset resource="../resources.qrc">
-                   <normaloff>:/Icons/Icons/send.svg</normaloff>:/Icons/Icons/send.svg</iconset>
                  </property>
                 </widget>
                </item>
