--- a/DekiApp_pyqt5/Screens/construction_preview_UI.ui
+++ b/DekiApp_pyqt5/Screens/construction_preview_UI.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1920</width>
-    <height>1000</height>
+    <height>915</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -2641,6 +2641,7 @@ border: 1px solid 'gray';}</string>
  <resources>
   <include location="../resources.qrc"/>
   <include location="../resources.qrc"/>
+  <include location="C:/Users/Młody/.designer/resources.qrc"/>
  </resources>
  <connections/>
 </ui>
