--- a/DekiApp_pyqt5/Screens/mainWindow.ui
+++ b/DekiApp_pyqt5/Screens/mainWindow.ui
@@ -1271,7 +1271,7 @@ background-color: rgba(214, 214, 214, 80);
  </widget>
  <resources>
   <include location="../resources.qrc"/>
-  <include location="C:/Users/Młody/.designer/resources.qrc"/>
+  <include location="../resources.qrc"/>
  </resources>
  <connections/>
 </ui>
